rs/spreads-mimalloc-sys/src/mimalloc.rs

/* automatically generated by rust-bindgen 0.57.0 */

extern "C" {
    pub fn mi_malloc(size: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_calloc(count: usize, size: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_realloc(p: *mut libc::c_void, newsize: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_expand(p: *mut libc::c_void, newsize: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_free(p: *mut libc::c_void);
}
extern "C" {
    pub fn mi_strdup(s: *const libc::c_char) -> *mut libc::c_char;
}
extern "C" {
    pub fn mi_strndup(s: *const libc::c_char, n: usize) -> *mut libc::c_char;
}
extern "C" {
    pub fn mi_realpath(
        fname: *const libc::c_char,
        resolved_name: *mut libc::c_char,
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn mi_malloc_small(size: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_zalloc_small(size: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_zalloc(size: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_mallocn(count: usize, size: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_reallocn(p: *mut libc::c_void, count: usize, size: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_reallocf(p: *mut libc::c_void, newsize: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_usable_size(p: *const libc::c_void) -> usize;
}
extern "C" {
    pub fn mi_good_size(size: usize) -> usize;
}
pub type mi_deferred_free_fun = ::core::option::Option<
    unsafe extern "C" fn(force: bool, heartbeat: libc::c_ulonglong, arg: *mut libc::c_void),
>;
extern "C" {
    pub fn mi_register_deferred_free(deferred_free: mi_deferred_free_fun, arg: *mut libc::c_void);
}
pub type mi_output_fun =
    ::core::option::Option<unsafe extern "C" fn(msg: *const libc::c_char, arg: *mut libc::c_void)>;
extern "C" {
    pub fn mi_register_output(out: mi_output_fun, arg: *mut libc::c_void);
}
pub type mi_error_fun =
    ::core::option::Option<unsafe extern "C" fn(err: libc::c_int, arg: *mut libc::c_void)>;
extern "C" {
    pub fn mi_register_error(fun: mi_error_fun, arg: *mut libc::c_void);
}
extern "C" {
    pub fn mi_collect(force: bool);
}
extern "C" {
    pub fn mi_version() -> libc::c_int;
}
extern "C" {
    pub fn mi_stats_reset();
}
extern "C" {
    pub fn mi_stats_merge();
}
extern "C" {
    pub fn mi_stats_print(out: *mut libc::c_void);
}
extern "C" {
    pub fn mi_stats_print_out(out: mi_output_fun, arg: *mut libc::c_void);
}
extern "C" {
    pub fn mi_process_init();
}
extern "C" {
    pub fn mi_thread_init();
}
extern "C" {
    pub fn mi_thread_done();
}
extern "C" {
    pub fn mi_thread_stats_print_out(out: mi_output_fun, arg: *mut libc::c_void);
}
extern "C" {
    pub fn mi_process_info(
        elapsed_msecs: *mut usize,
        user_msecs: *mut usize,
        system_msecs: *mut usize,
        current_rss: *mut usize,
        peak_rss: *mut usize,
        current_commit: *mut usize,
        peak_commit: *mut usize,
        page_faults: *mut usize,
    );
}
extern "C" {
    pub fn mi_malloc_aligned(size: usize, alignment: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_malloc_aligned_at(size: usize, alignment: usize, offset: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_zalloc_aligned(size: usize, alignment: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_zalloc_aligned_at(size: usize, alignment: usize, offset: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_calloc_aligned(count: usize, size: usize, alignment: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_calloc_aligned_at(
        count: usize,
        size: usize,
        alignment: usize,
        offset: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_realloc_aligned(
        p: *mut libc::c_void,
        newsize: usize,
        alignment: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_realloc_aligned_at(
        p: *mut libc::c_void,
        newsize: usize,
        alignment: usize,
        offset: usize,
    ) -> *mut libc::c_void;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mi_heap_s {
    _unused: [u8; 0],
}
pub type mi_heap_t = mi_heap_s;
extern "C" {
    pub fn mi_heap_new() -> *mut mi_heap_t;
}
extern "C" {
    pub fn mi_heap_delete(heap: *mut mi_heap_t);
}
extern "C" {
    pub fn mi_heap_destroy(heap: *mut mi_heap_t);
}
extern "C" {
    pub fn mi_heap_set_default(heap: *mut mi_heap_t) -> *mut mi_heap_t;
}
extern "C" {
    pub fn mi_heap_get_default() -> *mut mi_heap_t;
}
extern "C" {
    pub fn mi_heap_get_backing() -> *mut mi_heap_t;
}
extern "C" {
    pub fn mi_heap_collect(heap: *mut mi_heap_t, force: bool);
}
extern "C" {
    pub fn mi_heap_malloc(heap: *mut mi_heap_t, size: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_zalloc(heap: *mut mi_heap_t, size: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_calloc(heap: *mut mi_heap_t, count: usize, size: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_mallocn(heap: *mut mi_heap_t, count: usize, size: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_malloc_small(heap: *mut mi_heap_t, size: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_realloc(
        heap: *mut mi_heap_t,
        p: *mut libc::c_void,
        newsize: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_reallocn(
        heap: *mut mi_heap_t,
        p: *mut libc::c_void,
        count: usize,
        size: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_reallocf(
        heap: *mut mi_heap_t,
        p: *mut libc::c_void,
        newsize: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_strdup(heap: *mut mi_heap_t, s: *const libc::c_char) -> *mut libc::c_char;
}
extern "C" {
    pub fn mi_heap_strndup(
        heap: *mut mi_heap_t,
        s: *const libc::c_char,
        n: usize,
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn mi_heap_realpath(
        heap: *mut mi_heap_t,
        fname: *const libc::c_char,
        resolved_name: *mut libc::c_char,
    ) -> *mut libc::c_char;
}
extern "C" {
    pub fn mi_heap_malloc_aligned(
        heap: *mut mi_heap_t,
        size: usize,
        alignment: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_malloc_aligned_at(
        heap: *mut mi_heap_t,
        size: usize,
        alignment: usize,
        offset: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_zalloc_aligned(
        heap: *mut mi_heap_t,
        size: usize,
        alignment: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_zalloc_aligned_at(
        heap: *mut mi_heap_t,
        size: usize,
        alignment: usize,
        offset: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_calloc_aligned(
        heap: *mut mi_heap_t,
        count: usize,
        size: usize,
        alignment: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_calloc_aligned_at(
        heap: *mut mi_heap_t,
        count: usize,
        size: usize,
        alignment: usize,
        offset: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_realloc_aligned(
        heap: *mut mi_heap_t,
        p: *mut libc::c_void,
        newsize: usize,
        alignment: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_realloc_aligned_at(
        heap: *mut mi_heap_t,
        p: *mut libc::c_void,
        newsize: usize,
        alignment: usize,
        offset: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_rezalloc(p: *mut libc::c_void, newsize: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_recalloc(p: *mut libc::c_void, newcount: usize, size: usize) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_rezalloc_aligned(
        p: *mut libc::c_void,
        newsize: usize,
        alignment: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_rezalloc_aligned_at(
        p: *mut libc::c_void,
        newsize: usize,
        alignment: usize,
        offset: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_recalloc_aligned(
        p: *mut libc::c_void,
        newcount: usize,
        size: usize,
        alignment: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_recalloc_aligned_at(
        p: *mut libc::c_void,
        newcount: usize,
        size: usize,
        alignment: usize,
        offset: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_rezalloc(
        heap: *mut mi_heap_t,
        p: *mut libc::c_void,
        newsize: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_recalloc(
        heap: *mut mi_heap_t,
        p: *mut libc::c_void,
        newcount: usize,
        size: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_rezalloc_aligned(
        heap: *mut mi_heap_t,
        p: *mut libc::c_void,
        newsize: usize,
        alignment: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_rezalloc_aligned_at(
        heap: *mut mi_heap_t,
        p: *mut libc::c_void,
        newsize: usize,
        alignment: usize,
        offset: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_recalloc_aligned(
        heap: *mut mi_heap_t,
        p: *mut libc::c_void,
        newcount: usize,
        size: usize,
        alignment: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_recalloc_aligned_at(
        heap: *mut mi_heap_t,
        p: *mut libc::c_void,
        newcount: usize,
        size: usize,
        alignment: usize,
        offset: usize,
    ) -> *mut libc::c_void;
}
extern "C" {
    pub fn mi_heap_contains_block(heap: *mut mi_heap_t, p: *const libc::c_void) -> bool;
}
extern "C" {
    pub fn mi_heap_check_owned(heap: *mut mi_heap_t, p: *const libc::c_void) -> bool;
}
extern "C" {
    pub fn mi_check_owned(p: *const libc::c_void) -> bool;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct mi_heap_area_s {
    pub blocks: *mut libc::c_void,
    pub reserved: usize,
    pub committed: usize,
    pub used: usize,
    pub block_size: usize,
}
#[test]
fn bindgen_test_layout_mi_heap_area_s() {
    assert_eq!(
        ::core::mem::size_of::<mi_heap_area_s>(),
        40usize,
        concat!("Size of: ", stringify!(mi_heap_area_s))
    );
    assert_eq!(
        ::core::mem::align_of::<mi_heap_area_s>(),
        8usize,
        concat!("Alignment of ", stringify!(mi_heap_area_s))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<mi_heap_area_s>())).blocks as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(mi_heap_area_s),
            "::",
            stringify!(blocks)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<mi_heap_area_s>())).reserved as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(mi_heap_area_s),
            "::",
            stringify!(reserved)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<mi_heap_area_s>())).committed as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(mi_heap_area_s),
            "::",
            stringify!(committed)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<mi_heap_area_s>())).used as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(mi_heap_area_s),
            "::",
            stringify!(used)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<mi_heap_area_s>())).block_size as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(mi_heap_area_s),
            "::",
            stringify!(block_size)
        )
    );
}
